--- a/src/style.css
+++ b/src/style.css
@@ -1,13 +1,35 @@
-* {
-    margin: 0px;
+
+.my-dropdown-elements{
+    display:none;
 }
 
-/* links */
+.my-dropdown-hover {
+    position: relative;
+}
 
-.link-button {
-    padding: 5px;
-    font-family: 'Courier New', Courier, monospace;
+.my-dropdown-hover:hover .my-dropdown-elements{
+    display: block;
+    position: abolute;
+}
+
+.my-nav{
+    display: flex;
+    gap: 10px;
+    width: 100%;
+}
+
+.my-main-drop{
+    background-color: #001d4c;
+    padding: 2px;
+}
+
+.my-header{
+    background-color: #001d4c;
+}
+
+.my-button{
     color: white;
+    font-family:'Courier New', Courier, monospace;
     text-decoration: none;
     border: none;
     background-color: transparent;
@@ -16,95 +38,9 @@
     text-transform: uppercase;
 }
 
-.link-button:hover {
+.my-button:hover {
     color: #FF6B35;
+    background-color: transparent;
     box-shadow: -2px 2px 0px 0px #FF6B35;
-    transform: translate(2px, -2px);
-}
-
-/*dropdown*/
-
-.dropdown-elements {
-    display: none;
-    position: relative;
-}
-
-.dropdown-hover:hover .dropdown-elements{
-    display: block;
-    position: absolute;
-}
-
-
-
-
-
-/* Header */
-
-.page-top {
-    padding: 10px;
-    display: grid;
-    grid-template-areas : "logo nav translate";
-    grid-template-columns: 0.3fr 3fr 0.5fr;
-    grid-template-rows: 80px;
-    background-color: #001d4c;
-    align-items: center;
-}
-
-.page-logo {
-    grid-area: "logo";
-}
-
-.page-logo > img {
-    width: 90%;
-    max-height: 90%;
-}
-
-#menu-nav {
-    grid-area: "nav";
-}
-
-.main-nav > ul {
-    display: flex;
-    gap: 20px;
-    list-style: none;
-}
-
-.ul-dropdown {
-    list-style: none;
-    padding: 0px;
-    margin: 0px;
-    box-shadow: -2px 2px 0px 0px #FF6B35;
-}
-
-.ul-dropdown > li {
-    padding: 10px;
-    background-color: #001d4c;
-    text-align: center;
-    display:flex;
-}
-
-.ul-dropdown > li > a {
-    width: 100%;
-}
-
-#menu-translate {
-    grid-area: "translate";
-}
-
-#menu-translate > * {
-    padding: 10px;
-    border: 2px solid white;
-}
-
-
-/**/
-
-main {
-    width : 100%;
-}
-
-main > article {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    transform: translate(1px, -1px);
 }
