--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,6 @@
+/* *{
+    margin: 0 !important;
+} */
 
 .my-dropdown-elements{
     display:none;
@@ -43,4 +46,23 @@
     background-color: transparent;
     box-shadow: -2px 2px 0px 0px #FF6B35;
     transform: translate(1px, -1px);
+}
+
+.my-bg-img {
+    background-image: url('https://static.wixstatic.com/media/cc627c_a97f36c096bc4e2c967b48b284a92a1b~mv2.jpg/v1/fill/w_147,h_108,al_c,q_80,usm_0.66_1.00_0.01,blur_2,enc_auto/cc627c_a97f36c096bc4e2c967b48b284a92a1b~mv2.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    width: 100%;
+    position: relative;
+    background-attachment: fixed;
+}
+
+.my-bg-repeat {
+    background-image: url('https://static.wixstatic.com/media/cc627c_9d91d568929148d78e66d6bf21a6286b~mv2.png/v1/crop/x_0,y_0,w_1920,h_1570,q_95,enc_auto/cc627c_9d91d568929148d78e66d6bf21a6286b~mv2.png');
+    background-size: 50vw;
+    background-position: center;
+    background-repeat: repeat;
+    width: 100%;
+    position: relative;
 }
