--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,5 @@
 *{
-    margin: 0 !important;
+    margin: 0;
     padding: 0;
 } 
 
@@ -52,7 +52,7 @@
 
 .my-bg-img {
     z-index: -1;
-    background-image: url('https://static.wixstatic.com/media/cc627c_a97f36c096bc4e2c967b48b284a92a1b~mv2.jpg/v1/fill/w_147,h_108,al_c,q_80,usm_0.66_1.00_0.01,blur_2,enc_auto/cc627c_a97f36c096bc4e2c967b48b284a92a1b~mv2.jpg');
+    background-image: url('images/blue-bg.webp');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -62,7 +62,7 @@
 }
 
 .my-bg-repeat {
-    background-image: url('https://static.wixstatic.com/media/cc627c_9d91d568929148d78e66d6bf21a6286b~mv2.png/v1/crop/x_0,y_0,w_1920,h_1570,q_95,enc_auto/cc627c_9d91d568929148d78e66d6bf21a6286b~mv2.png');
+    background-image: url('images/white-bg.webp');
     background-size: 50vw;
     background-position: center;
     background-repeat: repeat;
@@ -79,4 +79,39 @@
     color: white;
     text-shadow: -2px 2px 0px #FF6B35;
     transform: scale(1.1);
+}
+
+.my-h1{
+    font-family: 'Courier New', Courier, monospace;
+    color: #001d4c;
+    text-align: center;
+    font-size: 3em;
+    text-transform: uppercase;
+    margin-top: 20px;
+    font-weight: bold;
+}
+
+.my-h2{
+    font-family: 'Courier New', Courier, monospace;
+    color: #001d4c;
+    text-align: center;
+    font-size: 1.5em;
+    margin-top: 20px;
+}
+
+.my-img-container{
+    display: flex-box;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.my-img-container > a{
+    margin: 10px;
+    text-decoration: none;
+}
+
+.my-small-img{
+    max-width: 100px;
+    height: auto;
+    object-fit: contain;
 }
